level up modal overflow animation bug fixed

--- a/src/widgets/level-up-modal/styles.module.scss
+++ b/src/widgets/level-up-modal/styles.module.scss
@@ -95,6 +95,8 @@
 .overflow {
     overflow: hidden;
     display: inline;
+    padding: 6px;
+    margin: -6px;
 }
 
 .levelup_text {
